--- a/App/Home/View/Default/Topic/ajaxlist.html
+++ b/App/Home/View/Default/Topic/ajaxlist.html
@@ -1,10 +1,10 @@
 <volist name="ajaxList" id="obj">
     <dl class="weibo_content_data">
         <dt><a href="javascript:void (0)">
-            <empty name="smallFace">
+            <empty name="obj.face">
                 <img src="__IMG__/small_face.jpg" alt=""/>
                 <else/>
-                <img src="__ROOT__/{$smallFace}" alt="" />
+                <img src="__ROOT__/{$obj.face}" alt="" />
             </empty>
         </a></dt>
         <dd>
