--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -107,6 +107,9 @@
                             <textarea class="com_text re_com_text" name="commend"></textarea>
                             <input type="hidden" name="tid" value="{$obj.id}"/>
                             <input class="com_button" type="button" value="评论"/>
+                            <div class="comment_content">
+                                <p style="text-align: center;">评论加载中<img src="__IMG__/loadmore.gif"/></p>
+                            </div>
                         </div>
                     </div>
                 </dd>
@@ -182,6 +185,9 @@
                                 <textarea class="com_text re_com_text" name="commend"></textarea>
                                 <input type="hidden" name="tid" value="{$obj.reid}"/>
                                 <input class="com_button" type="button" value="评论"/>
+                                <div class="comment_content">
+                                    <p style="text-align: center;">评论加载中<img src="__IMG__/loadmore.gif"/></p>
+                                </div>
                             </div>
                         </div>
                     </dd>
