--- a/App/Home/View/Default/Public/header.html
+++ b/App/Home/View/Default/Public/header.html
@@ -14,7 +14,7 @@
                 <li><a href="#">{:session('user_auth')['username']}</a></li>
                 <li class="app">消息
                     <dl class="list">
-                        <dd><a href="#">@提到我的</a></dd>
+                        <dd><a href="{:U('Setting/refer')}">@提到我的</a></dd>
                         <dd><a href="#">收到的评论</a></dd>
                         <dd><a href="#">发出的评论</a></dd>
                         <dd><a href="#">我的私信</a></dd>
