--- a/App/Home/View/Default/Comment/getList.html
+++ b/App/Home/View/Default/Comment/getList.html
@@ -11,3 +11,8 @@
         <li class="line">{$obj.time}</li>
     </volist>
 </ol>
+<div class="page">
+    <for start="1" end="$total+1">
+        <a href="javascript:void (0)" page="{$i}" class="page_comment {$page == $i ? 'select' : ''}">{$i}</a>
+    </for>
+</div>
