--- a/App/Home/View/Default/Setting/index.html
+++ b/App/Home/View/Default/Setting/index.html
@@ -11,6 +11,7 @@
             <li><a href="{:U('Setting/index')}" class="selected">个人设置</a></li>
             <li><a href="{:U('Setting/avatar')}">头像设置</a></li>
             <li><a href="{:U('Setting/domain')}">个性域名</a></li>
+            <li><a href="{:U('Setting/refer')}">@提及到我</a></li>
         </ul>
     </div>
     <div class="main_right">
