--- a/Public/Home/css/setting.css
+++ b/Public/Home/css/setting.css
@@ -76,6 +76,20 @@
     width: 80px;
     margin: 0 0 0 65px;
 }
+#main .main_right dl dd.a{
+    font-weight: bold;
+}
+#main .main_right dl dd.b{
+    font-weight: normal;
+}
+#main .main_right dl dd b.red{
+    cursor: pointer;
+    color: red;
+}
+#main .main_right dl dd b.green{
+    cursor: pointer;
+    color: green;
+}
 #main .main_right p.face_info{
     margin:10px 0;
     color: #333;
