--- a/App/Admin/View/Default/Index/index.html
+++ b/App/Admin/View/Default/Index/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>微博系统--后台</title>
+    <title>微博系统--后台管理</title>
     <script type="text/javascript" src="__EASYUI__/jquery.min.js"></script>
     <script type="text/javascript" src="__EASYUI__/jquery.easyui.min.js"></script>
     <script type="text/javascript" src="__EASYUI__/locale/easyui-lang-zh_CN.js"></script>
     <script type="text/javascript" src="__JS__/index.js"></script>
-    <link rel="stylesheet" type="text/css" href="__EASYUI__/themes/default/easyui.css" />
+    <link rel="stylesheet" type="text/css" href="__EASYUI__/themes/bootstrap/easyui.css" />
     <link rel="stylesheet" type="text/css" href="__EASYUI__/themes/icon.css" />
 </head>
 <body>
-
+主页
 </body>
 </html>
