--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -47,6 +47,9 @@
                 <li><a href="javascript:void(0)" class="selected">我关注的<i class="nav_arrow"></i></a></li>
                 <li><a href="javascript:void(0)">互听的</a></li>
             </ul>
+
+            <div class="msg">约0条广播，点击查看</div>
+
             <!--这里插入一个DOM节点-->
             <volist name="topicList" id="obj">
             <empty name="obj.reid">
