--- a/App/Admin/View/Default/Login/index.html
+++ b/App/Admin/View/Default/Login/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>微博系统--后台登录</title>
-    <script type="text/javascript" src="__EASYUI__/jquery.min.js"></script>
-    <script type="text/javascript" src="__EASYUI__/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="__EASYUI__/locale/easyui-lang-zh_CN.js"></script>
-    <script type="text/javascript" src="__JS__/login.js"></script>
+
     <link rel="stylesheet" type="text/css" href="__EASYUI__/themes/bootstrap/easyui.css" />
     <link rel="stylesheet" type="text/css" href="__EASYUI__/themes/icon.css" />
 </head>
@@ -30,6 +27,13 @@
         text-align: center;
     }
 </style>
+<script type="text/javascript">
+    var ThinkPHP = {
+        'ROOT' : '__ROOT__',
+        'MODULE' : '__MODULE__',
+        'INDEX' : '{:U("Index/index")}',
+    }
+</script>
 <body>
 
 <div id="login">
@@ -42,4 +46,8 @@
 </div>
 
 </body>
+<script type="text/javascript" src="__EASYUI__/jquery.min.js"></script>
+<script type="text/javascript" src="__EASYUI__/jquery.easyui.min.js"></script>
+<script type="text/javascript" src="__EASYUI__/locale/easyui-lang-zh_CN.js"></script>
+<script type="text/javascript" src="__JS__/login.js"></script>
 </html>
