--- a/App/Admin/View/Default/Index/index.html
+++ b/App/Admin/View/Default/Index/index.html
@@ -22,6 +22,10 @@
             padding: 30px 15px 0 0;
             color: #fff;
         }
+        .textbox{
+            height: 20px;
+            padding: 0 2px;
+        }
         a{
             color: #06f;
             text-decoration: none;
