后台用户管理

--- a/App/Admin/View/Default/Index/index.html
+++ b/App/Admin/View/Default/Index/index.html
@@ -49,6 +49,9 @@
         .datagrid-row-selected{
             background: #999;!important;
         }
+        .dialog-button{
+            text-align: center;
+        }
     </style>
     <script type="text/javascript">
         var ThinkPHP={
