--- a/App/Home/View/Default/Public/header.html
+++ b/App/Home/View/Default/Public/header.html
@@ -50,7 +50,7 @@
                     <dl class="list">
                         <dd><a href="{:U('Setting/index')}">个人设置</a></dd>
                         <dd><a href="#">排行榜</a></dd>
-                        <dd><a href="#">申请认证</a></dd>
+                        <dd><a href="{:U('Setting/approve')}">申请认证</a></dd>
                         <dd><a href="{:U('User/logout')}" class="line">退出》</a></dd>
                     </dl>
                 </li>
