--- a/App/Home/View/Default/Space/index.html
+++ b/App/Home/View/Default/Space/index.html
@@ -14,12 +14,21 @@
                         <else/>
                         <dt><img src="__ROOT__/{$bigFace}" alt=""></dt>
                     </empty></dt>
-                <dd class="username">{$user.username}</dd>
+                <dd class="username">{$user.username}
+                    <eq name="approve.state" value="1">
+                        <img src="__IMG__/approve.png" alt="认证个人" title="认证个人"/>
+                    </eq>
+                </dd>
                 <dd class="intro">个人简介：{$user.extend.intro}</dd>
             </dl>
         </div>
     </div>
     <div class="main_right">
-        right
+        <eq name="approve.state" value="1">
+            <dl>
+                <dt>微博认证资料</dt>
+                <dd>{$approve.name},{$approve.info}</dd>
+            </dl>
+        </eq>
     </div>
 </block>
