--- a/Public/Home/css/space.css
+++ b/Public/Home/css/space.css
@@ -39,3 +39,23 @@
     border-left: 1px solid #dddddd;
     float: right;
 }
+#main .main_right dl{
+    margin: 10px;
+    color: #333;
+    font-size: 13px;
+    padding: 10px 0 0 0;
+}
+#main .main_right dl dt{
+    color: #FF8247;
+    border: 1px solid #FF7F00;
+    border-radius: 3px;
+    width: 115px;
+    padding: 5px;
+    font-size: 14px;
+    text-indent: 20px;
+    background: #FFEFD5 url("../img/approve.png")no-repeat 5px center;
+}
+#main .main_right dl dd{
+    font-size: 13px;
+    padding: 10px 0 0 0;
+}
