--- a/App/Home/View/Default/Setting/avatar.html
+++ b/App/Home/View/Default/Setting/avatar.html
@@ -18,6 +18,7 @@
             <li><a href="{:U('Setting/avatar')}" class="selected">头像设置</a></li>
             <li><a href="{:U('Setting/domain')}">个性域名</a></li>
             <li><a href="{:U('Setting/refer')}">@提及到我</a></li>
+            <li><a href="{:U('Setting/approve')}">申请认证</a></li>
         </ul>
     </div>
     <div class="main_right">
