--- a/Public/Home/css/setting.css
+++ b/Public/Home/css/setting.css
@@ -76,6 +76,10 @@
     width: 80px;
     margin: 0 0 0 65px;
 }
+#main .main_right dl dd input.approve{
+    width: 80px;
+    margin: 0 0 0 65px;
+}
 #main .main_right dl dd.a{
     font-weight: bold;
 }
