--- a/App/Admin/View/Default/Comment/index.html
+++ b/App/Admin/View/Default/Comment/index.html
@@ -9,7 +9,7 @@
         <a href="javascript:void (0)" class="easyui-linkbutton" plain="true" iconCls="icon-redo" onclick="alert('没做');">取消选定</a>
     </div>
     <div style="padding: 0 0 0 7px;color: #333;">
-        查询评论：<input type="text" class="textbox" name="search_username" style="width: 110px;" />
+        查询评论：<input type="text" class="textbox" name="search_comment_username" style="width: 110px;" />
         创建时间从：<input type="text" name="date_from" editable="false" class="easyui-datebox" style="width: 110px;" />
         到：<input type="text" name="date_to" editable="false" class="easyui-datebox" style="width: 110px;" />
         <a href="javascript:void (0)" class="easyui-linkbutton" iconCls="icon-search" onclick="alert('没做');">查询</a>
