--- a/App/Admin/View/Default/Approve/index.html
+++ b/App/Admin/View/Default/Approve/index.html
@@ -2,11 +2,7 @@
 
 <div id="approve_tool" style="padding: 5px;">
     <div style="margin-bottom: 5px;">
-        <a href="javascript:void (0)" class="easyui-linkbutton" plain="true" iconCls="icon-add-new" onclick="alert('没做');">新增</a>
-        <a href="javascript:void (0)" class="easyui-linkbutton" plain="true" iconCls="icon-edit-new" onclick="alert('没做');">修改</a>
-        <a href="javascript:void (0)" class="easyui-linkbutton" plain="true" iconCls="icon-delete-new" onclick="alert('没做');">删除</a>
-        <a href="javascript:void (0)" class="easyui-linkbutton" plain="true" iconCls="icon-reload" onclick="alert('没做');">刷新</a>
-        <a href="javascript:void (0)" class="easyui-linkbutton" plain="true" iconCls="icon-redo" onclick="alert('没做');">取消选定</a>
+        <a href="javascript:void (0)" class="easyui-linkbutton" plain="true" iconCls="icon-add-new" onclick="approve_tool.edit();">通过</a>
     </div>
     <div style="padding: 0 0 0 7px;color: #333;">
         查询审核：<input type="text" class="textbox" name="search_approve_username" style="width: 110px;" />
